fixed overlapping

--- a/style.css
+++ b/style.css
@@ -10,24 +10,13 @@ html, body {
 .main-page {
   /*Image source © Divya Kalidindi*/
   background-image: url(http://ohtoptens.com/wp-content/uploads/2015/05/Geometric-Wallpaper-HD-27.jpg);
-  background-position: center;
   background-size: cover;
+  background-position: center;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-between;
-  height: 100%;
-  width: auto;
-  position: relative;
 }
 
 /*http://stackoverflow.com/questions/18694439/how-to-position-an-element-at-the-top-left-corner-of-a-page-using-css*/
-#title {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  font-size: 30px;
-  background-color: rgba(0, 0, 0, 1);
-}
 
 #sign-in {
   border-style: solid;
@@ -50,11 +39,12 @@ li {
   flex-flow: row nowrap;
   justify-content: space-around;
   padding-top: 15px;
-  padding-bottom: 15px;
+  /*padding-bottom: 15px;*/
 }
 
 .list-unit {
   list-style-type: none;
+  font-size: 15px;
 }
 
 
@@ -82,14 +72,7 @@ a:hover:not(.active) {
   justify-content: flex-end;
   margin: 0;
   padding: 30px;
-  float: right;
   font-size: 20px;
-}
-
-.nav p {
-  padding-left: 20px;
-  font-size: 45px;
-  text-decoration: none;
 }
 
 .title-info {
@@ -103,7 +86,7 @@ a:hover:not(.active) {
 
 .button-and-text {
   padding-top: 15px;
-  padding-bottom: 10px;
+  /*padding-bottom: 10px;*/
   padding-right: 20px;
   padding-left: 20px;
   background: rgba(0,0,0, 0.7);
@@ -143,82 +126,60 @@ input[type=text], select {
 
 
 .footer {
-  text-align: right;
+  /*text-align: right;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 20px;
-  padding-bottom: 40px;
-  background-color: black;
-}
-
-.footer li {
-  margin-left: 5px;
+  padding-bottom: 40px;*/
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+  margin: auto;
 }
 
 .footer ul {
   display: flex;
   flex-flow: row nowrap;
   list-style-type: none;
-  justify-content:flex-start;
-  float: right;
-  padding-right: 10px;
+  justify-content:flex-end;
+  padding: 50px;
+  margin-bottom: 130px;
 }
 
-#icon {
-  position: fixed;
-  left: 0px;
-  bottom: 0px;
+.footer li a {
+  color: black;
+}
+
+/*
+
+.footer #icon {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+}*/
+.footer #contact {
   font-size: 25px;
 }
-#contact {
-  font-size: 15px;
-}
-
 
 /*
 adapted from http://webdesignerwall.com/tutorials/css-responsive-navigation-menu*/
 @media only screen and (max-width: 640px){
 
-  .main-page {
-    display: block;
-    overflow: auto;
-    /*float: right;*/
-}
-
-.nav {
-	position: relative;
-  flex-direction: column;
-  /*overflow: auto;*/
-}
-.nav ul {
-	width: 180px;
-	padding: 5px 0;
-	position: fixed;
-	top: 0;
-	right: 0;
-	border-radius: 5px;
-}
-
-.nav li:first-child {
+.nav #title {
   display: flex;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  font-size: 30px;
-  width: 180px
-  padding 5px 0;
-}
-.nav li:last-child {
-	display: flex;
   flex-direction: column;
-  padding-right: 10px;
-}
-.nav li {
-	display: none; /* hide all <li> items */
-	margin: 0;
+  padding-left: 10px;
 }
 
+.nav #sign-in {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav #menu-item {
+  display: none;
+}
 
 input[type=text], select {
   padding: 10px 45px;
@@ -235,7 +196,7 @@ input[type=text], select {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 60px;
+  padding-top: 10px;
   text-align: center;
 
 }
@@ -244,40 +205,28 @@ input[type=text], select {
   display: flex;
   flex-flow: column;
   align-items: flex-start;
-  background: rgba(0, 0, 0, 0.4);
-  justify-content: space-around;
-  padding-bottom: 200px;
+  justify-content: space-between;
+  /*padding-bottom: px;*/
+  padding-top: 20px;
 }
 
-.list-unit li:first-child {
+.list-unit .link-head {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  font-size: 20px;
+  font-size: inherit;
 }
 
 .list-unit li {
   display: none; /* hide all <li> items */
   margin: 0;
-  font-size: 10px;
 }
 
-.footer {
-  text-align: right;
-  position: fixed;
-  width: 100%;
-  height: 20px;
-  padding-bottom: 40px;
-  background-color: black;
-  margin: 0 auto;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-
-.footer #contact {
-  font-size: 15px;
-}
+/*.footer #icon {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+}*/
 
 .footer li {
   display: flex;
